# daruma-web

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  Trunk.dev.toml  Trunk.toml  index.html  module.toml  style.css
.github/workflows/: docs-governance.yml  oss-boundary.yml
scripts/: check-oss-boundary.sh  dev-stack.sh  link-oss.sh  measure_perf.rs
src/: api.rs  app.rs  auth.rs  base.rs  event_store.rs  host_shell.rs  main.rs  projects_ctx.rs  relations_ctx.rs  ws.rs
src/components/: activity_feed.rs  agent_ops_panel.rs  artifacts_panel.rs  composer.rs  documents_panel.rs  fmt.rs  host_shell_nav.rs  mod.rs  plans_panel.rs  project_bar.rs  project_settings_panel.rs  settings_panel.rs  shell.rs  status_bar.rs  task_list.rs  task_row.rs  time_machine.rs  workspace_graph.rs
